# optix-minimal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: embed_cuda.cmake  run_bin2c.cmake
src/: main.cc  params.h  shaders.cu
